--- a/app/styles.css
+++ b/app/styles.css
@@ -53,6 +53,14 @@
   }
 }
 
+@layer utilities {
+  .animate-reveal {
+    animation-timeline: view();
+    animation-range-start: cover;
+    animation-range-end: 15%;
+  }
+}
+
 a,
 button,
 label[for],
@@ -69,25 +77,4 @@ svg:not([class*="stroke"]) {
 
 svg:not([class*="size-"]):not([class*="h-"]) {
   @apply size-[1em];
-}
-
-.fade-in {
-  animation: fade-in linear forwards;
-  animation-timeline: view();
-  animation-range-start: 0;
-  animation-range-end: 15%;
-  transform-style: preserve-3d;
-}
-
-@keyframes fade-in {
-  from {
-    scale: 0.9;
-    opacity: 0;
-    transform: translateY(20px) perspective(250px) rotateX(-15deg);
-  }
-  to {
-    scale: 1;
-    opacity: 1;
-    transform: translateY(0) perspective(500px) rotateX(0deg);
-  }
 }
