update dock and add new components

--- a/app/styles.css
+++ b/app/styles.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+:root,
+.light {
   --color-background: 0 0% 100%;
 
   --color-card: 0 0% 96%;
